	Added new FILE_SIZE_ERROR type that will be triggered if the user selected a file that is to large or zero bytes.
	Added new FILE_EXTENSION_ERROR type that will be triggered if you add a file with an invalid file extension.
	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
	Fixed some issues with the HTML4 runtime if there wasn't any existing forms on the page.
	Fixed some conflict issues with HTML4 runtime and forms with the input names of action or target.
	Fixed bug where some Gecko versions would produce exceptions when checking the HTTP status of a XHR.
Version 1.2.1 (2010-03-22)
	Fixed bug with incorrect aspect ratio in Flash image scaling.
	Fixed bug where chunked uploads could get scrambled in the Flash runtime. Patch contributed by Grady Werner.
	Fixed bug where a beta version of Chrome wouldn't handle drag/drop correctly because of missing drag effect.
	Fixed so the HTML 4 runtime displays N/A for file sizes and the progress is based on uploaded files instead of bytes.
	Fixed so chunking can be disabled properly in Flash but that will affect the progress bar.
	Fixed so queue widget displays the drag/drop message if file queue is emptied.
	Fixed small files are uploaded as one single chunk and not forced into 4 chunks in the Flash runtime.
Version 1.2 (2010-03-09)
	Added new rename file support for jQuery queue widget, click on a file name to rename it if it's enabled.
	Added official ChunkUploaded event, it similar to FileUploaded but executed for each chunk.
	Added bytes per second support to total queue progress.
	Added better error handling to core API using the new Error event.
	Added better error handling to jQuery queue widget.
	Fixed so chunking uploads is dispatch from JS not from inside Flash/Silverlight.
Version 1.1.1 (2010-02-25)
	Added new setup setting to queue widget. Makes it easier to bind custom events to uploader instance.